# airas-20251118-010645-Accelerate-neural-ne-a

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-iter1-ResNet-50-25M-ImageNet-1k.yaml  proposed-iter1-ResNet-50-25M-ImageNet-1k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
